<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/item1"
        android:icon="@drawable/cat_5646889_640"
        android:title="@string/Jake_Link"
        app:showAsAction="always"/>

    <item
        android:id="@+id/item2"
        android:title="@string/Shilpi_Link"
        android:icon="@drawable/song"
        app:showAsAction="always"/>

    <item
        android:id="@+id/item3"
        android:title="@string/Piyalee_Link"
        android:icon="@drawable/cat_5646889_640"
        app:showAsAction="always"/>

    <item
        android:id="@+id/item4"
        android:title="@string/Gabriel_Link"
        app:showAsAction="always"
        android:icon="@drawable/cat_5646889_640" />

</menu>
